# tidyup

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: BACKLOG.md  DEVELOPMENT.md  FUTURE_DIRECTIONS.md  MANUAL_TESTING.md  REQUIREMENTS.md  USER_GUIDE.md
scripts/: install.sh  manual_test.sh
src/tidy/: cli.py  discovery.py  engine.py  operations.py  utils.py
src/tidyup/: __init__.py  categories.py  cli.py  discovery.py  engine.py  interactive.py  logger.py  models.py  operations.py  rules.py  suggestions.py  utils.py
src/tidyup/detectors/: __init__.py  archive_book.py  arxiv.py  base.py  book.py  content.py  generic.py  installer.py  invoice.py  paper.py  screenshot.py
src/tidyup/renamers/: __init__.py  arxiv.py  base.py  book.py  generic.py  image.py  invoice.py  pdf.py  screenshot.py
tests/: __init__.py  conftest.py  test_archive_book_detector.py  test_book_detector.py  test_book_renamer.py  test_categories.py  test_cli.py  test_content.py  test_detectors.py  test_discovery.py  test_engine.py  test_installer_detector.py  test_invoice_detector.py  test_logger.py  test_models.py  test_operations.py  test_paper_detector.py  test_performance.py  test_phase7_integration.py  test_real_scenarios.py  test_renamers.py  test_routing.py  test_rules.py  test_suggestions.py  test_utils.py
