[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidyup"
version = "0.1.0"
description = "A CLI tool to organize, rename, and categorize files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Gonzalo" }
]
keywords = ["cli", "file-organizer", "downloads", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pypdf>=3.0",
    "pillow>=10.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
tidyup = "tidyup.cli:main"

[project.urls]
Repository = "https://github.com/gonzalo/tidyup"

[tool.hatch.build.targets.wheel]
packages = ["src/tidyup"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
